# world-cup-26-predictions

./: Hello.py  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml
data/: teams.csv
docs/: UserStories.md  technology_review.md  use-cases.md
docs/Functional Spec/: component-spec.md  functional-specifications.md  milestones.md
docs/Technology Review/: technology_review.md
examples/: README.md
notebooks/: Baseline_Models.ipynb  team_analytics.ipynb
pages/: 1_Analysis_Tool.py  2_Prediction_Tool.py
src/: add_nums.py
tests/: test_project.py
world_cup_26_predictions/: .coverage  Homepage.py  __init__.py  data_manager.py  test_data_manager.py
world_cup_26_predictions/.streamlit/: config.toml
world_cup_26_predictions/data/: fifa_mens_rankings.csv  fifa_womens_rankings.csv  locations.csv  temperatures_partitioned.csv
world_cup_26_predictions/pages/: 1_Analysis_Tool.py  2_Prediction_Tool.py  analysis_tool.py  prediction_tool.py
world_cup_26_predictions/player_analytics/: data_manager.py  player_analytics.py  player_analytics_tab.py
world_cup_26_predictions/predictions/: data_manager.py  data_manager_ml.py  label_encoder.pkl  predictions_app.py  preprocessor.pkl  train_model.py
world_cup_26_predictions/team_analytics/: team_analytics_tab.py
world_cup_26_predictions/tests/: test_app.py  test_data_manager.py  test_data_manager_ml.py  test_player_analytics.py  test_predictions_app.py  test_team_analytics.py  test_train_model.py
